# babilon-trade-bot

./: .gitignore  Dockerfile  PHASE3_COMPLETION_REPORT.md  PHASE5_6_COMPLETION_REPORT.md  README.md  README_ENHANCED.md  WhatToDo.md  api.py  auto_runner.py  backtest_runner.py  cli.py  config.py  demo.py  docker-compose.yml  env_template.txt  main.py  phase3_runner.py  phase5_6_runner.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  start_app.py  streamlit_app.py  streamlit_enhanced.py  streamlit_unified.py  test_api.py
.github/workflows/: ci.yml  test.yml
broker/: alpaca_client.py
data/: logs.csv
logic/: backtest.py  executor.py  feature_store.py  features.py  hybrid_signal.py  ner_filter.py  portfolio.py  risk_manager.py  ta_features.py  trade_decision.py  weight_tuner.py
model/: model_manager.py  sentiment_model.py  technical_trainer.py
tests/: conftest.py  test_alpaca_client.py  test_config.py  test_features_and_trainer.py  test_model_manager.py  test_sentiment_model.py  test_trade_decision.py  test_trade_decision_enhanced.py
visualization/: chart_data.py  export_plot.py  requirements.txt
visualization/output/: AAPL_chart.json  NVDA_chart.json  TSLA_chart.json
visualization/web/: app.js  index.html
web_app/: app.js  index.html
