[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "babilon-trade-bot"
version = "3.0.0"
description = "AI-powered trading bot combining sentiment analysis with technical indicators"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Babilon Team", email = "team@babilon.ai"}
]
keywords = ["trading", "ai", "sentiment-analysis", "finbert", "alpaca", "stock-market"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "alpaca-trade-api>=3.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
    "yfinance>=0.2.18",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "structlog>=23.1.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
backtest = [
    "backtrader>=1.9.78",
]
ml = [
    "lightgbm>=4.0.0",
    "xgboost>=1.7.0",
]
all = [
    "babilon-trade-bot[dev,backtest,ml]"
]

[project.urls]
Homepage = "https://github.com/babilon-team/babilon-trade-bot"
Documentation = "https://github.com/babilon-team/babilon-trade-bot/blob/main/README_ENHANCED.md"
Repository = "https://github.com/babilon-team/babilon-trade-bot"
Issues = "https://github.com/babilon-team/babilon-trade-bot/issues"

[project.scripts]
babilon = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["babilon*", "broker*", "logic*", "model*", "visualization*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "plotly.*",
    "streamlit.*",
    "alpaca_trade_api.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests that require API access",
]
